# docker-sandbox

./: .gitignore  README.md
2_haskell_warp/haskell-warp/: README.md  haskell-warp.cabal
2_haskell_warp/haskell-warp/.stack-work/install/495683e6/flag-cache/: aeson-1.1.2.0-IYYaF432Hu8HQKp7no3ap1  aeson-pretty-0.8.5-5mYVbvFiTi7CCeIahcTyxL  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  case-insensitive-1.2.0.10-1D5OUKQ7UrJ7IpOe0di4Un  cmdargs-0.10.17-IWa8ygdJhnJBShkQXN8V9I  conduit-1.2.12-Lvx0NKWTZH4BnyzXR667l8  conduit-extra-1.1.17-Irhqq9SglT03HZXHbVWOz3  dlist-0.8.0.3-BHFBNaw8k6n9WiaUNzoXpk  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  haskell-warp-0.1.0.0-4rln9dK5eQiBG2cWoYb50S  haskell-warp-0.1.0.0-7EbZrbfJAsa7k3uvOkuCrq  hex-0.1.2-HUUA94TVE748JTmJozIoTC  http-date-0.0.6.1-AkYFHBFn90lGSerD29arC9  http-types-0.9.1-G7E1zHPzooHCYxKqGuQmxY  http2-1.6.3-DWygTopf8WWKUNlYLaOtz7  integer-logarithms-1.0.2-92lMiWV9mmYAwfMEYgfQ0D  iproute-1.7.1-9BRunn4fZ2LJijFUX0wAoi  lifted-base-0.2.3.11-Ei0JSPdt7KOCD2HIA5jFqV  mmorph-1.0.9-5bASEvmIkr5CpdAYXwPsn0  monad-control-1.0.2.2-1Ci8dYJ8Tb7E3HTcTqOb8l  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  network-2.6.3.2-F0OcsS89osODGCGHNf1FTk  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  (+22 more)
2_haskell_warp/haskell-warp/app/: Main.hs
(+6 files in other folders)
