name:                haskell-warp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-warp#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Justyna
maintainer:          piotr.justyna@gmail.com
copyright:           2017 Piotr Justyna
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library

executable haskell-warp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-warp
                     , wai
                     , warp
                     , http-types
                     , blaze-builder
                     , utf8-string
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/PiotrJustyna/docker-sandbox
